--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ conformer==0.3.2
 deepspeed==0.14.2; sys_platform == 'linux'
 diffusers==0.29.0
 gdown==5.1.0
-gradio==5.4.0
+gradio==3.43.2
 grpcio==1.57.0
 grpcio-tools==1.57.0
 hydra-core==1.3.2
@@ -23,8 +23,8 @@ openai-whisper==20231117
 protobuf==4.25
 pydantic==2.7.0
 pyworld==0.3.4
-ray==2.41.0
-ray[serve]
+ray==2.40.0
+ray[serve]==2.40.0
 rich==13.7.1
 soundfile==0.12.1
 tensorboard==2.14.0
@@ -39,4 +39,6 @@ wget==3.2
 fastapi==0.115.6
 fastapi-cli==0.0.4
 WeTextProcessing==1.0.3
-matcha-tts
+numpy==1.26.4
+scipy==1.11.4
+matcha-tts==0.0.7.2
